Update comment pointing to relevant hook name

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ ci:
   autoupdate_schedule: "quarterly"
 default_install_hook_types:
   - pre-commit
-  - post-checkout # sync-python
+  - post-checkout # sync
 repos:
   - repo: "meta"
     hooks:
