--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,10 +81,10 @@ jobs:
           - "ubuntu-22.04"
           - "windows-2022"
         python:
-          # - "3.10"  # `scripts` currently requires `tomllib`, which is > 3.10
+          # - "3.10"  # ? `scripts` currently requires `tomllib`, which is > 3.10
           - "3.11"
           - "3.12"
-          # - "3.13.0-alpha.5"  # https://github.com/PyO3/pyo3/issues/3555
+          # - "3.13.0-alpha.5"  # ? https://github.com/PyO3/pyo3/issues/3555
     runs-on: "${{ matrix.runner }}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
