--- a/.github/ISSUE_TEMPLATE/feature-request.yaml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yaml
@@ -1,6 +1,6 @@
 name: "Feature request"
 description: "Request a new feature"
-labels: ["type: enhancement"]
+labels: ["enhancement"]
 body:
   - type: "checkboxes"
     id: "no-duplicate-issues"
@@ -8,7 +8,7 @@ body:
       label: "Please check that this feature hasn't been requested before."
       options:
         - required: True
-          label: "I searched previous feature requests [here](https://github.com/blakeNaccarato/copier-python/issues?q=label:enhancement+sort:comments-desc) or [here](https://github.com/search?q=repo:blakeNaccarato/copier-python+label:enhancement&type=issues) and didn't find any similar requests."
+          label: "I searched previous feature requests [here](https://github.com/blakeNaccarato/copier-python/issues?q=label%3Aenhancement+sort%3Acomments-desc) or [here](https://github.com/search?q=repo%3AblakeNaccarato/copier-python+label%3Aenhancement&type=issues) and didn't find any similar requests."
   - type: "textarea"
     id: "feature-description"
     validations:
