--- a/.github/ISSUE_TEMPLATE/ideas-for-docs.yaml
+++ b/.github/ISSUE_TEMPLATE/ideas-for-docs.yaml
@@ -1,6 +1,6 @@
 name: "Documentation request"
 description: "Request documentation improvements"
-labels: ["type: docs"]
+labels: ["docs"]
 body:
   - type: "checkboxes"
     id: "no-duplicate-issues"
@@ -8,7 +8,7 @@ body:
       label: "Please check that this documentation improvement hasn't been requested before."
       options:
         - required: True
-          label: "I searched previous documentation improvement requests [here](https://github.com/blakeNaccarato/copier-python/issues?q=label:docs+sort:comments-desc) or [here](https://github.com/search?q=repo:blakeNaccarato/copier-python+label:docs&type=issues) and didn't find any similar requests."
+          label: "I searched previous documentation improvement requests [here](https://github.com/blakeNaccarato/copier-python/issues?q=label%3Adocs+sort%3Acomments-desc) or [here](https://github.com/search?q=repo%3AblakeNaccarato/copier-python+label%3Adocs&type=issues) and didn't find any similar requests."
   - type: "textarea"
     id: "feature-description"
     validations:
