--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,12 @@ Tracker = "https://github.com/blakeNaccarato/copier-python/issues"
 name = "Blake Naccarato"
 email = "blake.naccarato@gmail.com"
 
+[tool.coverage.run]
+branch = true
+source = ["copier_python"]
+[tool.coverage.report]
+ignore_errors = true
+
 [tool.fawltydeps]
 deps = ["pyproject.toml"]
 code = ["src"]
@@ -37,11 +43,31 @@ markers = "slow"
 testpaths = "tests"
 xfail_strict = true
 
-[tool.coverage.run]
-branch = true
-source = ["copier_python"]
-[tool.coverage.report]
-ignore_errors = true
+[tool.towncrier]
+directory = "changelog"
+filename = "CHANGELOG.md"
+template = "changelog/towncrier_template.md.jinja"
+title_format = ""
+issue_format = "[#{issue}](https://github.com/python-attrs/attrs/issues/{issue})"
+underlines = ["", "", ""]
+
+[[tool.towncrier.section]]
+path = ""
+
+[[tool.towncrier.type]]
+directory = "breaking"
+name = "Backwards-incompatible changes"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "deprecation"
+name = "Deprecations"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "change"
+name = "Changes"
+showcontent = true
 
 [tool.pyright]
 exclude = ["**/node_modules", "**/__pycache__", "**/.*", "bin", "submodules"]
