--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "linkify-it-py==2.0.3",
     "myst-nb==1.0.0",
     "nbformat==5.10.3",
+    "ruamel-yaml==0.18.6",
     "sphinx-autobuild==2024.2.4",
     "sphinx-autodoc2==0.5.0",
     "sphinx-book-theme==1.1.2",
@@ -20,6 +21,7 @@ dependencies = [
     "sphinx==7.2.6",
     "sphinxcontrib-bibtex==2.6.2",
     "sphinxcontrib-mermaid==0.9.2",
+    "sphinxcontrib-towncrier==0.4.0a0",
 ]
 
 [tool.fawltydeps]
@@ -44,4 +46,7 @@ ignore_unused = [
     "sphinx-togglebutton",
     "sphinxcontrib-bibtex",
     "sphinxcontrib-mermaid",
+    "sphinxcontrib-towncrier",
 ]
+[tool.fawltydeps.custom_mapping]
+ruamel-yaml = ["ruamel"]
