--- a/template/.vscode/settings.json
+++ b/template/.vscode/settings.json
@@ -81,6 +81,8 @@
     "source.organizeImports": "explicit"
   },
   //! Extensions
+  //* autoDocstring
+  "autoDocstring.docstringFormat": "numpy-notypes",
   //* GitHub Actions
   "github-actions.workflows.pinned.workflows": [".github/workflows/ci.yml"],
   //* Jupyter Notebooks
