--- a/.github/workflows/contrib.yml
+++ b/.github/workflows/contrib.yml
@@ -42,7 +42,7 @@ jobs:
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
           python-version: "${{ matrix.python }}"
-      - run: "scripts/Sync-Py.ps1 -Lock -Version '3.11'"
+      - run: "scripts/Sync-Py.ps1 -Version '3.11'"
   spaces-in-path:
     strategy:
       matrix:
@@ -66,4 +66,4 @@ jobs:
         with:
           python-version: "${{ matrix.python }}"
       - working-directory: "repo path with spaces"
-        run: "scripts/Sync-Py.ps1 -Lock -Version '3.11'"
+        run: "scripts/Sync-Py.ps1 -Version '3.11'"
