--- a/scripts/pyproject.toml
+++ b/scripts/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit_core.buildapi"
 name = "copier_python_tools"
 version = "0.0.0"
 description = "Tools."
-dependencies = ["cyclopts==2.5.0", "pipx==1.5.0"]
+dependencies = ["cyclopts==2.5.0", "pipx==1.5.0", "ruamel-yaml==0.18.6"]
 [project.scripts]
 "copier_python_tools" = "copier_python_tools.__main__:main"
 
@@ -22,3 +22,5 @@ ignore_undeclared = [
 ignore_unused = [
     "pipx", # For `pipx run` of scripts with dependencies isolated by PEP 723
 ]
+[tool.fawltydeps.custom_mapping]
+ruamel-yaml = ["ruamel"]
