--- a/template/.pre-commit-config.yaml
+++ b/template/.pre-commit-config.yaml
@@ -33,7 +33,7 @@ repos:
           pwsh -Command ". scripts/Initialize-Shell.ps1; scripts/Sync-Py.ps1"
         exclude: |
           (?x)^(
-            lock.+\.json
+            lock.*\.json
           $)
       - id: "fawltydeps-src"
         name: "fawltydeps-src"
