--- a/template/.devcontainer/devcontainer.json
+++ b/template/.devcontainer/devcontainer.json
@@ -74,7 +74,9 @@
         "ms-toolsai.jupyter@2024.1.1",
         "ms-vscode-remote.remote-containers@0.353.0",
         "njpwerner.autodocstring@0.6.1",
+        "njpwerner.autodocstring@0.6.1",
         "redhat.vscode-yaml@1.14.0",
+        "rodolphebarbanneau.python-docstring-highlighter@0.2.3",
         "rodolphebarbanneau.python-docstring-highlighter@0.2.3",
         "ryanluker.vscode-coverage-gutters@2.11.1",
         "sourcery.sourcery@1.16.0",
