--- a/template/.vscode/extensions.json
+++ b/template/.vscode/extensions.json
@@ -19,7 +19,9 @@
     "ms-toolsai.jupyter",
     "ms-vscode-remote.remote-containers",
     "njpwerner.autodocstring",
+    "njpwerner.autodocstring",
     "redhat.vscode-yaml",
+    "rodolphebarbanneau.python-docstring-highlighter",
     "rodolphebarbanneau.python-docstring-highlighter",
     "ryanluker.vscode-coverage-gutters",
     "sourcery.sourcery",
