--- a/template/.vscode/extensions.json
+++ b/template/.vscode/extensions.json
@@ -17,6 +17,7 @@
     "ms-python.python",
     "ms-python.vscode-pylance",
     "ms-toolsai.jupyter",
+    "ms-vscode.powershell",
     "ms-vscode-remote.remote-containers",
     "njpwerner.autodocstring",
     "njpwerner.autodocstring",
