Automate changelog entry

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,12 @@
       "description": "Template options.",
       "type": "pickString",
       "options": ["", "-Stay", "-Stay -Prompt", "-Recopy -Prompt"]
+    },
+    {
+      "id": "changeType",
+      "description": "Change type.",
+      "type": "pickString",
+      "options": ["breaking", "deprecation", "change"]
     }
   ],
   "tasks": [
@@ -79,6 +85,20 @@
     // * -------------------------------------------------------------------------- * //
     // * OTHER TASKS * //
 
+    {
+      "label": "task: Generate changelog entry",
+      "type": "shell",
+      "command": ". scripts/Initialize-Shell.ps1; python -m copier_python_tools add-change ${input:changeType}",
+      "icon": { "id": "request-changes" },
+      "problemMatcher": []
+    },
+    {
+      "label": "task: Show tree of packages requesting a dependency",
+      "type": "shell",
+      "command": ". scripts/Initialize-Shell.ps1; pipdeptree --reverse --packages ${input:dependency}",
+      "icon": { "id": "versions" },
+      "problemMatcher": []
+    },
     {
       "label": "task: Run pytest with coverage",
       "type": "shell",
