--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,9 +1,11 @@
+# Merged requirements for all platforms for security audit
+# Likely to be an incompatible dependency set, do not install from this file
 accessible-pygments==0.0.5
 alabaster==0.7.16
 annotated-types==0.7.0
 anyio==4.4.0
 appnope==0.1.4
-argcomplete==3.3.0
+argcomplete==3.4.0
 astroid==3.2.2
 asttokens==2.4.1
 attrs==23.2.0
@@ -18,7 +20,7 @@ click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 copier==9.2.0
-coverage==7.5.3
+coverage==7.5.4
 cryptography==42.0.8
 cyclopts==2.7.0
 debugpy==1.8.1
@@ -26,11 +28,12 @@ decorator==5.1.1
 distlib==0.3.8
 docstring-parser==0.15
 docutils==0.21.2
+dulwich==0.22.1
 dunamai==1.21.1
 executing==2.0.1
-fastjsonschema==2.19.1
+fastjsonschema==2.20.0
 fawltydeps==0.15.0
-filelock==3.15.1
+filelock==3.15.4
 flit-core==3.9.0
 flit==3.9.0
 funcy==2.0
@@ -39,7 +42,7 @@ h11==0.14.0
 identify==2.5.36
 idna==3.7
 imagesize==1.4.1
-importlib-metadata==7.1.0
+importlib-metadata==8.0.0
 incremental==22.10.0
 iniconfig==2.0.0
 ipykernel==6.29.4
@@ -84,7 +87,7 @@ pluggy==1.5.0
 plumbum==1.8.3
 pre-commit==3.7.1
 prompt-toolkit==3.0.47
-psutil==5.9.8
+psutil==6.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.2
 pybtex-docutils==1.0.3
@@ -92,7 +95,7 @@ pybtex==0.24.0
 pycparser==2.22
 pydantic-core==2.18.4
 pydantic==2.7.4
-pydata-sphinx-theme==0.15.3
+pydata-sphinx-theme==0.15.4
 pygments==2.18.0
 pyparsing==3.1.2
 pyright==1.1.367
@@ -115,7 +118,7 @@ ruamel-yaml-clib==0.2.8
 ruamel-yaml==0.18.6
 ruff==0.4.8
 secretstorage==3.3.3
-setuptools==70.0.0
+setuptools==70.1.1
 six==1.16.0
 snakeviz==2.2.0
 sniffio==1.3.1
@@ -139,7 +142,7 @@ sphinxcontrib-mermaid==0.9.2
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
 sphinxcontrib-towncrier==0.4.0a0
-sqlalchemy==2.0.30
+sqlalchemy==2.0.31
 stack-data==0.6.3
 starlette==0.37.2
 tabulate==0.9.0
@@ -149,10 +152,10 @@ towncrier==23.11.0
 traitlets==5.14.3
 typing-extensions==4.12.2
 uc-micro-py==1.0.3
-urllib3==2.2.1
+urllib3==2.2.2
 userpath==1.9.2
 uvicorn==0.30.1
-virtualenv==20.26.2
+virtualenv==20.26.3
 watchfiles==0.22.0
 wcwidth==0.2.13
 websockets==12.0
