--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -155,12 +155,13 @@ jobs:
           - "macos-13"
           - "ubuntu-22.04"
           - "windows-2022"
+        # ? https://github.com/actions/python-versions/releases
         python:
           - "3.10"
           - "3.11"
           - "3.12"
-          - "3.13"
-          # - "3.14"  # ? https://github.com/PyO3/pyo3/issues/3555
+          - "3.13.0-beta.2"
+          # - "3.13.0-alpha.0"  # ? https://github.com/PyO3/pyo3/issues/3555
     runs-on: "${{ matrix.runner }}"
     steps:
       - uses: "actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332" # v4.1.7
